Add Lab401 link

--- a/default.hbs
+++ b/default.hbs
@@ -267,6 +267,7 @@
                   <a href="https://neuronspace.ru/">Neuron Hackerspace </a>
                   <a href="https://designheroes.io/">Design Heroes</a>
                   <a href="https://slozhno.media/">Slozhno.Media</a>
+                  <a href="https://lab401.com/">Lab401</a>
                 </div>
               </div>
 
