--- a/default.hbs
+++ b/default.hbs
@@ -268,6 +268,7 @@
                   <a href="https://designheroes.io/">Design Heroes</a>
                   <a href="https://slozhno.media/">Slozhno.Media</a>
                   <a href="https://lab401.com/">Lab401</a>
+                  <a href="https://flipp.dev/joom-catalog">Joom</a>
                 </div>
               </div>
 
