Add hacker warehouse link

--- a/default.hbs
+++ b/default.hbs
@@ -283,6 +283,7 @@
               <a href="https://slozhno.media/">Slozhno.Media</a>
               <a href="https://lab401.com/">Lab401</a>
               <a href="https://flipp.dev/joom-catalog">Joom</a>
+              <a href="https://hackerwarehouse.com/product/flipper-zero/">Hacker Warehouse</a>
             </div>
           </div>
     
