--- a/default.hbs
+++ b/default.hbs
@@ -268,7 +268,7 @@
             <div class="links">
               <a href="https://docs.flipperzero.one/">Documentation</a>
               <a href="https://flipperzero.one/developers">Developer Program</a>
-              <a href="https://github.com/flipperdevices">Github</a>
+              <a href="https://github.com/flipperdevices">GitHub</a>
               <a href="https://flipperzero.one/design-guide">Design Guide</a>
             </div>
           </div>
