Replace Press Kit with Abuse Report

--- a/default.hbs
+++ b/default.hbs
@@ -293,8 +293,7 @@
               <a href="https://flipperzero.one/compliance">Compliance</a>
               <a href="https://www.flipperdevices.com/">Company</a>
               <a href="https://www.flipperdevices.com/jobs">Careers</a>
-              <a href="https://drive.google.com/drive/folders/1452h630Dq-Tk2xkS_Z8qTHZHylGFByd4">Press
-                kit</a>
+              <a href="https://flipperzero.one/abuse-report">Abuse Report</a>
               <a href="https://flipperzero.one/privacy">Privacy Policy</a>
             </div>
           </div>
