Ensure remark form is always visible

--- a/post.hbs
+++ b/post.hbs
@@ -72,7 +72,7 @@ into the {body} tag of the default.hbs template --}}
         </section>
 
         <section id="comments" class="article-comments gh-canvas">
-            <div id="remark42"></div>
+            <div id="remark42" style="min-height: 327px;z-index: 2;"></div>
         </section>
 
     </article>
