Footer: Rename Partners to Distributors, new links

--- a/default.hbs
+++ b/default.hbs
@@ -275,11 +275,12 @@
     
         <div class="footer-section-half">
           <div class="footer-section">
-            <h4>Partners</h4>
+            <h4>Distributors</h4>
             <div class="links">
               <a href="https://lab401.com/">Lab401</a>
               <a href="https://flipp.dev/joom-catalog">Joom</a>
-              <a href="https://hackerwarehouse.com/product/flipper-zero/">Hacker Warehouse</a>
+              <a href="https://flipperzero.one/how-to-buy">How to buy</a>
+              <a href="https://forms.gle/M7EYXKRAfVRPF2uu9">Become a Partner</a>
             </div>
           </div>
     
