Add cookie banners (GDPR/row)

--- a/default.hbs
+++ b/default.hbs
@@ -26,6 +26,8 @@
     it should always be the last tag before the closing head tag --}}
     {{ghost_head}}
 
+    <script type="text/javascript" charset="UTF-8" src="//geo.cookie-script.com/s/8f4ef68924e665a9b46e07072710c055.js?country=gb&region=eu"></script>
+    <script type="text/javascript" charset="UTF-8" src="//geo.cookie-script.com/s/bf3d5d88324c9259b95794e0a38c884d.js"></script>
 </head>
 <body class="{{body_class}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Modern sans-serif"}} has-sans-body{{/match}}">
 <div class="viewport">
