--- a/default.hbs
+++ b/default.hbs
@@ -290,6 +290,7 @@
             <h4>About</h4>
             <div class="links">
               <a href="https://flipperzero.one/contacts">Contacts</a>
+              <a href="https://flipperdevices.com/jobs">Careers</a>
               <a href="https://flipperzero.one/compliance">Compliance</a>
               <a href="https://www.flipperdevices.com/">Company</a>
               <a href="https://flipperzero.one/abuse-report">Abuse Report</a>
