Change links to flipper.net

--- a/default.hbs
+++ b/default.hbs
@@ -260,15 +260,15 @@
                 href="https://www.kickstarter.com/projects/flipper-devices/flipper-zero-tamagochi-for-hackers">Kickstarter</a>
               <a href="https://habr.com/ru/company/flipperdevices/">Habr.com</a>
               <a href="https://flipperzero.one/discord">Discord</a>
-              <a href="https://forum.flipperzero.one/">Forum</a>
-              <a href="http://blog.flipperzero.one/">Blog</a>
+              <a href="https://forum.flipper.net/">Forum</a>
+              <a href="https://blog.flipper.net/">Blog</a>
             </div>
           </div>
     
           <div class="footer-section">
             <h4>For developers</h4>
             <div class="links">
-              <a href="https://docs.flipperzero.one/">Documentation</a>
+              <a href="https://docs.flipper.net/">Documentation</a>
               <a href="https://github.com/flipperdevices">GitHub</a>
               <a href="https://flipperzero.one/design-guide">Design Guide</a>
             </div>
