Add RoW cookie banner

--- a/default.hbs
+++ b/default.hbs
@@ -29,6 +29,7 @@
     <!--<script type="text/javascript" charset="UTF-8" src="//geo.cookie-script.com/s/8f4ef68924e665a9b46e07072710c055.js?country=gb&region=eu"></script>
     <script type="text/javascript" charset="UTF-8" src="//geo.cookie-script.com/s/bf3d5d88324c9259b95794e0a38c884d.js"></script>-->
     <script type="text/javascript" charset="UTF-8" src="//geo.cookie-script.com/s/f8a60297dc525a033b0a8af63817e2ec.js?country=gb&region=eu"></script>
+    <script type="text/javascript" charset="UTF-8" src="//geo.cookie-script.com/s/61dedad9b4e4f970f835539a6da77c45.js"></script>
 </head>
 <body class="{{body_class}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Modern sans-serif"}} has-sans-body{{/match}}">
 <div class="viewport">
