--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,3 +1,9 @@
+/*
+Syntax highlighting for code blocks
+*/
+
+@import "prism.css";
+
 /* Table of Contents
 /* ------------------------------------------------------------
 
@@ -255,7 +261,7 @@ production stylesheet in assets/built/screen.css
     opacity: 0.8
 }
 
-.gh-social a + a {
+.gh-social a+a {
     margin-left: 0.8rem;
 }
 
@@ -325,7 +331,7 @@ a.gh-head-button {
     width: 100%;
     height: 1px;
     background: currentcolor;
-    transition: transform 300ms cubic-bezier(.2,.6,.3,1), width 300ms cubic-bezier(.2,.6,.3,1);
+    transition: transform 300ms cubic-bezier(.2, .6, .3, 1), width 300ms cubic-bezier(.2, .6, .3, 1);
     will-change: transform, width;
 }
 
@@ -341,13 +347,14 @@ a.gh-head-button {
     width: 100%;
     height: 1px;
     background: currentcolor;
-    transition: transform 250ms cubic-bezier(.2,.7,.3,1), width 250ms cubic-bezier(.2,.7,.3,1);
+    transition: transform 250ms cubic-bezier(.2, .7, .3, 1), width 250ms cubic-bezier(.2, .7, .3, 1);
     will-change: transform, width;
 }
 
 .gh-burger-inner::before {
     transform: translatey(-6px);
 }
+
 .gh-burger-inner::after {
     transform: translatey(6px);
 }
@@ -355,6 +362,7 @@ a.gh-head-button {
 body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::before {
     transform: translatey(-8px);
 }
+
 body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     transform: translatey(8px);
 }
@@ -362,7 +370,7 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
 .gh-head-open .gh-burger-box::before {
     width: 0;
     transform: translatex(19px);
-    transition: transform 200ms cubic-bezier(.2,.7,.3,1), width 200ms cubic-bezier(.2,.7,.3,1);
+    transition: transform 200ms cubic-bezier(.2, .7, .3, 1), width 200ms cubic-bezier(.2, .7, .3, 1);
 }
 
 .gh-head-open .gh-burger-inner::before {
@@ -384,14 +392,17 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     .gh-burger {
         display: inline-block;
     }
+
     #gh-head {
         transition: all 0.4s ease-out;
         overflow: hidden;
     }
+
     #gh-head .gh-head-inner {
         height: 100%;
         grid-template-columns: 1fr;
     }
+
     #gh-head .gh-head-brand {
         position: relative;
         z-index: 10;
@@ -402,6 +413,7 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
         justify-content: space-between;
         user-select: none;
     }
+
     #gh-head .gh-head-menu {
         align-self: center;
         display: flex;
@@ -413,35 +425,43 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
         font-size: 3.6rem;
         line-height: 1.1em;
     }
+
     #gh-head .gh-head-menu .nav li {
         margin: 5px 0;
     }
+
     #gh-head .gh-head-menu .nav a {
         padding: 8px 0;
     }
+
     #gh-head .gh-head-menu .nav {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
     #gh-head .gh-head-actions {
         padding: 20px 0;
         justify-content: center;
         text-align: left;
     }
+
     #gh-head .gh-head-actions a {
         margin: 0 10px;
     }
+
     /* Hide collapsed content */
     #gh-head .gh-head-actions,
     #gh-head .gh-head-menu {
         display: none;
     }
+
     /* Open the menu */
     .gh-head-open {
         overflow: hidden;
         height: 100vh;
     }
+
     .gh-head-open #gh-head {
         position: fixed;
         top: 0;
@@ -451,9 +471,11 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
         z-index: 3999999;
         overflow-y: scroll;
     }
+
     .gh-head-open #gh-head .gh-head-inner {
         grid-template-rows: auto 1fr auto;
     }
+
     .gh-head-open #gh-head .gh-head-actions,
     .gh-head-open #gh-head .gh-head-menu {
         display: flex;
@@ -493,6 +515,7 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
         grid-template-columns: 1fr 1fr;
     }
 }
+
 @media (max-width: 700px) {
     .post-feed {
         grid-template-columns: 1fr;
@@ -645,7 +668,7 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     width: 36px;
     height: 36px;
     border-radius: 100%;
-    box-shadow: 0 0 0 1px rgba(255,255,255,0.2);
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.2);
 }
 
 .post-card-byline-content {
@@ -899,21 +922,10 @@ use it for applying any other styles. */
 .gh-canvas {
     display: grid;
     grid-template-columns:
-        [full-start]
-        minmax(4vmin, auto)
-            [wide-start]
-            minmax(auto, 190px)
-                [main-start]
-                    min(820px, calc(100% - 8vw))
-                [main-end]
-            minmax(auto, 190px)
-            [wide-end]
-        minmax(4vmin, auto)
-        [full-end]
-    ;
+        [full-start] minmax(4vmin, auto) [wide-start] minmax(auto, 190px) [main-start] min(820px, calc(100% - 8vw)) [main-end] minmax(auto, 190px) [wide-end] minmax(4vmin, auto) [full-end];
 }
 
-.gh-canvas > * {
+.gh-canvas>* {
     grid-column: main-start / main-end;
 }
 
@@ -938,40 +950,41 @@ created within the Ghost editor. The main content handles
 headings, text, images and lists. We deal with cards lower down. */
 
 /* Default vertical spacing */
-.gh-content > * + * {
+.gh-content>*+* {
     margin-top: 4vmin;
     margin-bottom: 0;
 }
 
 /* [id] represents all headings h1-h6, reset all margins */
-.gh-content > [id] {
+.gh-content>[id] {
     margin: 0;
     color: var(--color-darkgrey);
 }
 
-.has-serif-title .gh-content > [id] {
+.has-serif-title .gh-content>[id] {
     font-family: var(--font-serif);
 }
 
 /* Add back a top margin to all headings, unless a heading
 is the very first element in the post content */
-.gh-content > [id]:not(:first-child) {
+.gh-content>[id]:not(:first-child) {
     margin: 2em 0 0;
 }
 
 /* Add a small margin between a heading and anything after it */
-.gh-content > [id] + * {
+.gh-content>[id]+* {
     margin-top: 1.5rem !important;
 }
 
 /* A larger margin before/after HRs and blockquotes */
-.gh-content > hr,
-.gh-content > blockquote {
+.gh-content>hr,
+.gh-content>blockquote {
     position: relative;
     margin-top: 6vmin;
 }
-.gh-content > hr + *,
-.gh-content > blockquote + * {
+
+.gh-content>hr+*,
+.gh-content>blockquote+* {
     margin-top: 6vmin !important;
 }
 
@@ -982,11 +995,11 @@ is the very first element in the post content */
     word-break: break-word;
 }
 
-.gh-content > blockquote:not([class]),
-.gh-content > ol,
-.gh-content > ul,
-.gh-content > dl,
-.gh-content > p {
+.gh-content>blockquote:not([class]),
+.gh-content>ol,
+.gh-content>ul,
+.gh-content>dl,
+.gh-content>p {
     font-family: var(--font-serif);
     font-weight: 400;
     font-size: 2.1rem;
@@ -994,18 +1007,18 @@ is the very first element in the post content */
 }
 
 .gh-content .kg-callout-card .kg-callout-text,
-.gh-content .kg-toggle-card .kg-toggle-content > ol,
-.gh-content .kg-toggle-card .kg-toggle-content > ul,
-.gh-content .kg-toggle-card .kg-toggle-content > p {
+.gh-content .kg-toggle-card .kg-toggle-content>ol,
+.gh-content .kg-toggle-card .kg-toggle-content>ul,
+.gh-content .kg-toggle-card .kg-toggle-content>p {
     font-family: var(--font-serif);
     font-weight: 400;
     font-size: 1.9rem;
     line-height: 1.6em;
 }
 
-.gh-content .kg-product-card .kg-product-card-description > p,
-.gh-content .kg-product-card .kg-product-card-description > ol,
-.gh-content .kg-product-card .kg-product-card-description > ul {
+.gh-content .kg-product-card .kg-product-card-description>p,
+.gh-content .kg-product-card .kg-product-card-description>ol,
+.gh-content .kg-product-card .kg-product-card-description>ul {
     font-size: 1.7rem;
     line-height: 1.6em;
 }
@@ -1019,35 +1032,35 @@ is the very first element in the post content */
     font-size: 2.0rem;
 }
 
-.has-sans-body .gh-content > blockquote,
-.has-sans-body .gh-content > ol,
-.has-sans-body .gh-content > ul,
-.has-sans-body .gh-content > dl,
-.has-sans-body .gh-content > p,
+.has-sans-body .gh-content>blockquote,
+.has-sans-body .gh-content>ol,
+.has-sans-body .gh-content>ul,
+.has-sans-body .gh-content>dl,
+.has-sans-body .gh-content>p,
 .has-sans-body .gh-content .kg-callout-card .kg-callout-text,
-.has-sans-body .gh-content .kg-toggle-card .kg-toggle-content > ol,
-.has-sans-body .gh-content .kg-toggle-card .kg-toggle-content > ul,
-.has-sans-body .gh-content .kg-toggle-card .kg-toggle-content > p {
+.has-sans-body .gh-content .kg-toggle-card .kg-toggle-content>ol,
+.has-sans-body .gh-content .kg-toggle-card .kg-toggle-content>ul,
+.has-sans-body .gh-content .kg-toggle-card .kg-toggle-content>p {
     font-family: var(--font-sans);
 }
 
-.gh-content > ul,
-.gh-content > ol,
-.gh-content > dl,
-.gh-content .kg-toggle-card .kg-toggle-content > ol,
-.gh-content .kg-toggle-card .kg-toggle-content > ul,
-.gh-content .kg-product-card .kg-product-card-description > ol,
-.gh-content .kg-product-card .kg-product-card-description > ul {
+.gh-content>ul,
+.gh-content>ol,
+.gh-content>dl,
+.gh-content .kg-toggle-card .kg-toggle-content>ol,
+.gh-content .kg-toggle-card .kg-toggle-content>ul,
+.gh-content .kg-product-card .kg-product-card-description>ol,
+.gh-content .kg-product-card .kg-product-card-description>ul {
     padding-left: 1.9em;
 }
 
-.gh-content > blockquote:not([class]) {
+.gh-content>blockquote:not([class]) {
     position: relative;
     font-style: italic;
     padding: 0;
 }
 
-.gh-content > blockquote:not([class])::before {
+.gh-content>blockquote:not([class])::before {
     content: "";
     position: absolute;
     left: -1.5em;
@@ -1057,7 +1070,7 @@ is the very first element in the post content */
     background: var(--ghost-accent-color);
 }
 
-.gh-content :not(pre) > code {
+.gh-content :not(pre)>code {
     vertical-align: middle;
     padding: 0.15em 0.4em 0.15em;
     border: #e1eaef 1px solid;
@@ -1077,25 +1090,26 @@ is the very first element in the post content */
     line-height: 1.5em;
     background: var(--color-darkgrey);
     border-radius: 5px;
-    box-shadow: 0 2px 6px -2px rgba(0,0,0,.1), 0 0 1px rgba(0,0,0,.4);
+    box-shadow: 0 2px 6px -2px rgba(0, 0, 0, .1), 0 0 1px rgba(0, 0, 0, .4);
 }
 
 @media (max-width: 650px) {
-    .gh-content > blockquote:not([class]),
-    .gh-content > ol,
-    .gh-content > ul,
-    .gh-content > dl,
-    .gh-content > p,
+
+    .gh-content>blockquote:not([class]),
+    .gh-content>ol,
+    .gh-content>ul,
+    .gh-content>dl,
+    .gh-content>p,
     .gh-content .kg-callout-card .kg-callout-text,
-    .gh-content .kg-toggle-card .kg-toggle-content > ol,
-    .gh-content .kg-toggle-card .kg-toggle-content > ul,
-    .gh-content .kg-toggle-card .kg-toggle-content > p {
+    .gh-content .kg-toggle-card .kg-toggle-content>ol,
+    .gh-content .kg-toggle-card .kg-toggle-content>ul,
+    .gh-content .kg-toggle-card .kg-toggle-content>p {
         font-size: 1.7rem;
     }
 
-    .gh-content .kg-product-card .kg-product-card-description > p,
-    .gh-content .kg-product-card .kg-product-card-description > ol,
-    .gh-content .kg-product-card .kg-product-card-description > ul {
+    .gh-content .kg-product-card .kg-product-card-description>p,
+    .gh-content .kg-product-card .kg-product-card-description>ol,
+    .gh-content .kg-product-card .kg-product-card-description>ul {
         font-size: 1.5rem;
     }
 
@@ -1115,11 +1129,12 @@ make sure they look good, and are given a bit of extra spacing. */
 
 /* Add extra margin before/after any cards,
 except for when immediately preceeded by a heading */
-.gh-content :not(.kg-card):not([id]) + .kg-card {
+.gh-content :not(.kg-card):not([id])+.kg-card {
     margin-top: 6vmin;
     margin-bottom: 0;
 }
-.gh-content .kg-card + :not(.kg-card) {
+
+.gh-content .kg-card+ :not(.kg-card) {
     margin-top: 6vmin;
     margin-bottom: 0;
 }
@@ -1170,14 +1185,16 @@ except for when immediately preceeded by a heading */
 figcaption {
     padding: 1.5rem 1.5rem 0;
     text-align: center;
-    color: rgba(0,0,0,0.5);
+    color: rgba(0, 0, 0, 0.5);
     font-weight: 600;
     font-size: 1.3rem;
     line-height: 1.4em;
 }
+
 figcaption strong {
-    color: rgba(0,0,0,0.8);
+    color: rgba(0, 0, 0, 0.8);
 }
+
 figcaption a {
     color: var(--ghost-accent-color);
 }
@@ -1190,7 +1207,7 @@ iframe.instagram-media {
     margin-bottom: 0 !important;
 }
 
-iframe.instagram-media + script + :not([id]) {
+iframe.instagram-media+script+ :not([id]) {
     margin-top: 6vmin;
 }
 
@@ -1206,6 +1223,7 @@ iframe.instagram-media + script + :not([id]) {
 .kg-width-wide.kg-card-hascaption img {
     grid-column: wide-start / wide-end;
 }
+
 .kg-width-full.kg-card-hascaption img {
     grid-column: 1 / -1;
 }
@@ -1263,13 +1281,13 @@ iframe.instagram-media + script + :not([id]) {
 }
 
 .post-full-content table td:first-child {
-    background-image: linear-gradient(to right, rgba(255,255,255, 1) 50%, rgba(255,255,255, 0) 100%);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
     background-size: 20px 100%;
     background-repeat: no-repeat;
 }
 
 .post-full-content table td:last-child {
-    background-image: linear-gradient(to left, rgba(255,255,255, 1) 50%, rgba(255,255,255, 0) 100%);
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
     background-position: 100% 0;
     background-size: 20px 100%;
     background-repeat: no-repeat;
@@ -1457,6 +1475,7 @@ iframe.instagram-media + script + :not([id]) {
     .read-more {
         grid-template-columns: 1fr 1fr;
     }
+
     .read-more article:nth-child(3) {
         display: none;
     }
@@ -1466,6 +1485,7 @@ iframe.instagram-media + script + :not([id]) {
     .read-more {
         grid-template-columns: 1fr;
     }
+
     .read-more article:nth-child(2) {
         display: none;
     }
@@ -1497,7 +1517,7 @@ iframe.instagram-media + script + :not([id]) {
     position: sticky;
     top: 4vmin;
     font-size: 1.4rem;
-    line-height:  1.4em;
+    line-height: 1.4em;
 }
 
 .author-profile-pic {
@@ -1551,12 +1571,15 @@ iframe.instagram-media + script + :not([id]) {
         grid-template-columns: 1fr;
         grid-gap: 0;
     }
+
     .author-template .posts .post-feed {
         grid-column: 1 / auto;
     }
+
     .author-profile {
         padding-right: 0;
     }
+
     .author-profile-content {
         display: flex;
         flex-direction: column;
@@ -1624,12 +1647,15 @@ iframe.instagram-media + script + :not([id]) {
     .error-content {
         padding-top: 24vw;
     }
+
     .error-code {
         font-size: 11.2rem;
     }
+
     .error-message {
         padding-bottom: 16vw;
     }
+
     .error-description {
         margin: 5px 0 0 0;
         font-size: 1.8rem;
@@ -1640,6 +1666,7 @@ iframe.instagram-media + script + :not([id]) {
     .error-content {
         padding-top: 28vw;
     }
+
     .error-message {
         padding-bottom: 14vw;
     }
@@ -1661,7 +1688,7 @@ iframe.instagram-media + script + :not([id]) {
     display: grid;
     grid-gap: 40px;
     grid-template-columns: auto 1fr auto;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
     font-size: 1.3rem;
 }
 
@@ -1672,11 +1699,11 @@ iframe.instagram-media + script + :not([id]) {
 }
 
 .site-footer a {
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .site-footer a:hover {
-    color: rgba(255,255,255,1);
+    color: rgba(255, 255, 255, 1);
     text-decoration: none;
 }
 
@@ -1721,6 +1748,7 @@ iframe.instagram-media + script + :not([id]) {
         grid-gap: 0;
         text-align: center;
     }
+
     .site-footer .copyright,
     .site-footer .copyright a {
         color: #fff;
@@ -1743,7 +1771,7 @@ to the html tag on the very first line of the file.
 
  */
 
- html.dark-mode body {
+html.dark-mode body {
     color: rgba(255, 255, 255, 0.75);
     background: var(--color-darkmode);
 }
@@ -1809,7 +1837,7 @@ html.dark-mode .no-image .author-social-link a {
     color: rgba(255, 255, 255, 0.75);
 }
 
-html.dark-mode .gh-content > [id] {
+html.dark-mode .gh-content>[id] {
     color: rgba(255, 255, 255, 0.9);
 }
 
@@ -1817,7 +1845,7 @@ html.dark-mode .gh-content pre {
     background: color-mod(var(--color-darkgrey) l(-8%));
 }
 
-html.dark-mode .gh-content :not(pre) > code {
+html.dark-mode .gh-content :not(pre)>code {
     background: color-mod(var(--color-darkgrey) l(+6%));
     border-color: color-mod(var(--color-darkmode) l(+8%));
     color: var(--color-wash);
@@ -1960,7 +1988,7 @@ html.dark-mode .kg-header-card h3.kg-header-card-subheader {
         color: rgba(255, 255, 255, 0.75);
     }
 
-    html.auto-color .gh-content > [id] {
+    html.auto-color .gh-content>[id] {
         color: rgba(255, 255, 255, 0.9);
     }
 
@@ -1968,7 +1996,7 @@ html.dark-mode .kg-header-card h3.kg-header-card-subheader {
         background: color-mod(var(--color-darkgrey) l(-8%));
     }
 
-    html.auto-color .gh-content :not(pre) > code {
+    html.auto-color .gh-content :not(pre)>code {
         background: color-mod(var(--color-darkgrey) l(+6%));
         border-color: color-mod(var(--color-darkmode) l(+8%));
         color: var(--color-wash);
@@ -2060,8 +2088,15 @@ the right place. Onward!
 
  */
 
- .is-imageBackgrounded {
+.is-imageBackgrounded {
     all: unset;
     margin: 0;
     display: contents;
- }
+}
+
+/*
+For the little chevron in the expandable blocks
+*/
+.kg-toggle-heading svg {
+    color: #35373A !important;
+}
