--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -223,10 +223,10 @@ production stylesheet in assets/built/screen.css
     color: var(--color-flipper);
 }
 
-.gh-head-menu .nav li:nth-of-type(4) a {
+/* .gh-head-menu .nav li:nth-of-type(4) a {
     color: var(--color-darkgrey);
     opacity: 0.7;
-}
+} */
 
 
 /* Secondary Navigation
