--- a/default.hbs
+++ b/default.hbs
@@ -286,6 +286,7 @@
           <div class="footer-section">
             <h4>About</h4>
             <div class="links">
+              <a href="https://support.flipper.net/">Support</a>
               <a href="https://flipperzero.one/contacts">Contacts</a>
               <a href="https://flipperzero.one/compliance">Compliance</a>
               <a href="https://www.flipperdevices.com/">Company</a>
