Footer: Rename For developers to Resources, add links

--- a/default.hbs
+++ b/default.hbs
@@ -263,10 +263,13 @@
           </div>
 
           <div class="footer-section">
-            <h4>For developers</h4>
+            <h4>Resources</h4>
             <div class="links">
-              <a href="https://docs.flipperzero.one/">Documentation</a>
+              <a href="https://flipperzero.one/downloads">Downloads</a>
+              <a href="https://docs.flipperzero.one">Documentation</a>
+              <a href="https://developer.flipper.net/flipperzero/doxygen/index.html">For Developers</a>
               <a href="https://github.com/flipperdevices">GitHub</a>
+              <a href="https://lab.flipper.net">Lab</a>
               <a href="https://flipperzero.one/design-guide">Design Guide</a>
             </div>
           </div>
