Update twitter link

--- a/default.hbs
+++ b/default.hbs
@@ -308,7 +308,7 @@
               imgfield="tn_img_1598903563540"></a>
         </div>
         <div class="footer-social-el">
-          <a class="tn-atom" href="https://twitter.com/flipper_zero">
+          <a class="tn-atom" href="https://x.com/flipper_net">
             <img class="tn-atom__img" src="https://static.tildacdn.com/tild3964-6436-4931-a631-643566316262/twitter.png"
               imgfield="tn_img_1584873111253">
           </a>
