--- a/page.hbs
+++ b/page.hbs
@@ -10,6 +10,7 @@ into the {body} tag of the default.hbs template --}}
 <main id="site-main" class="site-main">
     <article class="article {{post_class}}">
 
+      {{#match @page.show_title_and_feature_image}}
         <header class="article-header gh-canvas">
             {{#if feature_image}}
             <figure class="article-image">
@@ -30,6 +31,7 @@ into the {body} tag of the default.hbs template --}}
             </figure>
             {{/if}}
         </header>
+      {{/match}}
 
         <section class="gh-content gh-canvas">
 
