fix: relative links

--- a/default.hbs
+++ b/default.hbs
@@ -72,11 +72,11 @@
             <div class="custom-footer__column">
             <ul class="custom-footer__links">
                 <li class="custom-footer__item">
-                <a href="/collections" class="custom-footer__link">Products</a>
+                <a href="https://flipper.net/collections" class="custom-footer__link">Products</a>
                 </li>
 
                 <li class="custom-footer__item">
-                <a href="/pages/downloads" class="custom-footer__link">Downloads</a>
+                <a href="https://flipper.net/pages/downloads" class="custom-footer__link">Downloads</a>
                 </li>
 
                 <li class="custom-footer__item">
@@ -92,7 +92,7 @@
                 </li>
 
                 <li class="custom-footer__item">
-                <a href="/pages/community" class="custom-footer__link">Community</a>
+                <a href="https://flipper.net/pages/community" class="custom-footer__link">Community</a>
                 </li>
 
                 <li class="custom-footer__item">
@@ -128,7 +128,7 @@
                 </li>
 
                 <li class="custom-footer__item">
-                <a href="/pages/contacts" class="custom-footer__link">Contacts</a>
+                <a href="https://flipper.net/pages/contacts" class="custom-footer__link">Contacts</a>
                 </li>
             </ul>
             </div>
@@ -241,35 +241,35 @@
         <nav class="custom-footer__bottom-nav" aria-label="Footer bottom">
             <ul class="custom-footer__bottom-links">
             <li>
-                <a href="/policies/shipping-policy" class="custom-footer__bottom-link">Shipping</a>
+                <a href="https://flipper.net/policies/shipping-policy" class="custom-footer__bottom-link">Shipping</a>
             </li>
 
             <li>
-                <a href="/pages/b2b-and-tax-exemption-policy" class="custom-footer__bottom-link">VAT Exemption</a>
+                <a href="https://flipper.net/pages/b2b-and-tax-exemption-policy" class="custom-footer__bottom-link">VAT Exemption</a>
             </li>
 
             <li>
-                <a href="/policies/refund-policy" class="custom-footer__bottom-link">Returns</a>
+                <a href="https://flipper.net/policies/refund-policy" class="custom-footer__bottom-link">Returns</a>
             </li>
 
             <li>
-                <a href="/pages/warranty-policy" class="custom-footer__bottom-link">Warranty</a>
+                <a href="https://flipper.net/pages/warranty-policy" class="custom-footer__bottom-link">Warranty</a>
             </li>
 
             <li>
-                <a href="/policies/privacy-policy" class="custom-footer__bottom-link">Privacy</a>
+                <a href="https://flipper.net/policies/privacy-policy" class="custom-footer__bottom-link">Privacy</a>
             </li>
 
             <li>
-                <a href="/pages/abuse-report" class="custom-footer__bottom-link">Abuse Report</a>
+                <a href="https://flipper.net/pages/abuse-report" class="custom-footer__bottom-link">Abuse Report</a>
             </li>
 
             <li>
-                <a href="/pages/compliance" class="custom-footer__bottom-link">Compliance</a>
+                <a href="https://flipper.net/pages/compliance" class="custom-footer__bottom-link">Compliance</a>
             </li>
 
             <li>
-                <a href="/policies/terms-of-service" class="custom-footer__bottom-link">Terms of Service</a>
+                <a href="https://flipper.net/policies/terms-of-service" class="custom-footer__bottom-link">Terms of Service</a>
             </li>
             </ul>
         </nav>
@@ -469,7 +469,7 @@
     </footer>
 
     <script>
-    document.getElementById('footer-copyright-year').textContent = new Date().getFullYear();
+        document.getElementById('footer-copyright-year').textContent = new Date().getFullYear();
     </script>
 </div>
 
